updated index.html from user

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <Div>
-        Hello World From Zeeshan
+        //Hello World From Zeeshan
+        Hello World From Faraz
     </Div>
 </body>
 </html>
